# ruby-llm-eval

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: pricing.yaml  rubocop.yml
ruby_llm_eval/: __init__.py  cli.py  config.py  evaluate.py  generate.py  model_client.py  pass_k.py  report.py  tasks.py
sandbox/: Dockerfile
tasks/001_fizzbuzz/: prompt.md  solution_ref.rb
tasks/002_palindrome/: test.rb
tasks/003_two_sum/: prompt.md  solution_ref.rb
tasks/005_word_frequency/: prompt.md
tasks/006_anagram_groups/: prompt.md
tasks/007_run_length_encode/: test.rb
tasks/009_roman_to_integer/: prompt.md  solution_ref.rb
tasks/010_balanced_brackets/: test.rb
tasks/011_caesar_cipher/: solution_ref.rb
tasks/012_binary_search/: solution_ref.rb  test.rb
tasks/013_merge_intervals/: prompt.md  solution_ref.rb
tasks/014_matrix_transpose/: prompt.md  solution_ref.rb
tasks/015_longest_common_prefix/: test.rb
tasks/016_stack/: spec.rb
tasks/017_ar_scopes/: solution_ref.rb  test.rb
tasks/019_ar_associations/: prompt.md
tasks/021_ar_migration/: solution_ref.rb  test.rb
tasks/022_rails_controller/: test.rb
tasks/023_string_to_integer/: solution_ref.rb  test.rb
tests/: test_assets.py  test_cli.py  test_config.py  test_evaluate.py  test_generate.py  test_installed_assets.py  test_pass_k.py  test_report.py  test_tasks.py
(+101 files in other folders)
